modify lib usage and db statements
